src/components/css/post-content.css
/* ... */
.post-content dd {
    margin: 0 0 5px 0;
    text-align: left;
}

.post-content blockquote {
    padding: 0 0 0 1.5em;
    border-left: #3eb0ef 2px solid;
}

.post-content blockquote p:last-child {
    margin-bottom: 0;
}

.post-content blockquote p {
    margin: 0;
    font-size: 1.2em;
    font-weight: 400;
    color: inherit;
    font-size: inherit;
    line-height: inherit;
    font-style: italic;
}

.post-content blockquote small {
    display: inline-block;
    font-size: 0.9em;
    opacity: 0.8;
}
/* Quotation marks */
.post-content blockquote small:before {
    content: "\2014 \00A0";
}

.post-content blockquote cite {
    font-weight: bold;
}
.post-content blockquote cite a {
    font-weight: normal;
}

.post-content h1,
.post-content h2,
.post-content h3,
.post-content h4,
.post-content h5,
.post-content h6,
.post-content p,
.post-content ul,
.post-content ol,
.post-content dl,
.post-content pre,
.post-content blockquote,
.post-content .gatsby-highlight,
.post-comments,
.footnotes {
    min-width: 100%;
}

.post-content li {
    word-break: break-word;
}

.post-content li p {
    margin: 0;
}

/*TODO: use color-mod*/
.post-content a {
    color: #2FA1E0; /*should be blue-d2*/
    word-break: break-word;
    text-decoration: none;
    /* box-shadow: rgba(62, 176, 239, 0.4) 0 -1px 0 inset; */
    transition: all 0.2s ease;
}

.post-content a:hover {
    color: #2497D6;
    box-shadow: var(--blue) 0 -1px 0 inset;
    text-decoration: none;
}

.post-content strong,
.post-content em {
    color: color(var(--darkgrey) l(-5%));
}

.post-content small {
    display: inline-block;
    line-height: 1.6em;
}

.post-content li:first-child {
    margin-top: 0;
}

.post-content img,
.post-content video {
    display: block;
    margin: 1.5em auto;
    max-width: 1040px;
    height: auto;
}


/* Full bleed images (#full)
Super neat trick courtesy of @JoelDrapper
Usage (In Ghost edtior):
![img](/some/image.jpg#full)
*/
.post-content img[src$="#full"] {
    max-width: none;
    width: 100vw;
}


/* Image captions
Usage (In Ghost editor):
![img](/some/image.jpg)
<small>Your image caption</small>
*/
.post-content img + br + small {
    display: block;
    margin-top: -3em;
    margin-bottom: 1.5em;
    text-align: center;
}


/* Override third party iframe styles */
.post-content iframe {
    margin: 0 auto !important;
}

.post-content .fluid-width-video-wrapper {
    margin: 1.5em 0 3em;
}

.post-content h1,
.post-content h2,
.post-content h3,
.post-content h4,
.post-content h5,
.post-content h6 {
    color: inherit;
    outline: none;
}

.post-content h1 .anchor,
.post-content h2 .anchor,
.post-content h3 .anchor,
.post-content h4 .anchor,
.post-content h5 .anchor,
.post-content h6 .anchor {
    margin: -2px 0 0 -32px;
    padding: 0 8px;
}

.post-content h1 .anchor svg path,
.post-content h2 .anchor svg path,
.post-content h3 .anchor svg path,
.post-content h4 .anchor svg path,
.post-content h5 .anchor svg path,
.post-content h6 .anchor svg path {
    fill: var(--midgrey);
}

.post-content > h1:first-child,
.post-content > h2:first-child,
.post-content > h3:first-child,
.post-content > h4:first-child,
.post-content > h5:first-child,
.post-content > h6:first-child {
    padding-top: var(--navbar-size);
    margin: calc(var(--vr-4) - var(--navbar-size)) 0 0;
}

.post-content h1 {
    font-size: 4.4rem;
    font-weight: 300;
    line-height: var(--vr-8);
    letter-spacing: -0.2px;
    padding-top: var(--navbar-size);
    margin: calc(var(--vr-8) - var(--navbar-size)) 0 0;
}

@media (max-width: 500px) {
    .post-content h1 {
        font-size: 2.8rem;
    }
}

.post-content h2 {
    font-size: 3.3rem;
    font-weight: 600;
    line-height: var(--vr-6);
    padding-top: var(--navbar-size);
    margin: calc(var(--vr-7) - var(--navbar-size)) 0 0;
}
@media (max-width: 500px) {
    .post-content h2 {
        font-size: 2.6rem;
    }
}

.post-content h3 {
    font-size: 2.5rem;
    font-weight: 500;
    line-height: var(--vr-5);
    padding-top: var(--navbar-size);
    margin: calc(var(--vr-6) - var(--navbar-size)) 0 0;
    letter-spacing: -0.4px;
}
@media (max-width: 500px) {
    .post-content h3 {
        font-size: 2.2rem;
    }
}

.post-content h4 {
    font-size: 1.9rem;
    font-weight: 500;
    line-height: var(--vr-4);
    padding-top: var(--navbar-size);
    margin: calc(var(--vr-6) - var(--navbar-size)) 0 0;
}
@media (max-width: 500px) {
    .post-content h4 {
        font-size: 2.2rem;
    }
}

.post-content h5 {
    font-size: 2.5rem;
    font-weight: 300;
    font-style: italic;
    line-height: var(--vr-5);
    padding-top: var(--navbar-size);
    margin: calc(var(--vr-6) - var(--navbar-size)) 0 0;
    color: var(--blue);
}
@media (max-width: 500px) {
    .post-content h5 {
        padding: 0 0 0.5em;
        font-size: 2.2rem;
    }
}

.post-content h6 {
    font-size: 1.45rem;
    font-weight: 600;
    line-height: var(--vr-3);
    padding-top: var(--navbar-size);
    margin: calc(var(--vr-6) - var(--navbar-size)) 0 0;
    text-transform: uppercase;
    letter-spacing: 0.2px;
    word-spacing: 3px;
}
@media (max-width: 500px) {
    .post-content h6 {
        font-size: 2rem;
    }
}

.post-content h2 + p,
.post-content h3 + p,
.post-content h4 + p,
.post-content h6 + p
 {
    margin: var(--vr-1) 0 0;
}

.post-content h1 + h1,
.post-content h1 + h2,
.post-content h1 + h3,
.post-content h1 + h4,
.post-content h1 + h6 {
    margin: var(--vr-6) 0 0;
}

.post-content h2 + h2,
.post-content h2 + h3,
.post-content h2 + h4,
.post-content h2 + h6 {
    margin: var(--vr-2) 0 0;
}

.post-content h3 + h3,
.post-content h3 + h4,
.post-content h3 + h6 {
    margin: var(--vr-2) 0 0;
}

.post-content h4 + h4,
.post-content h4 + h6 {
    margin: var(--vr-1) 0 0;
}
/* ... */

